--- a/.github/workflows/merge_workflow.yml
+++ b/.github/workflows/merge_workflow.yml
@@ -2,7 +2,7 @@ name: 'Merge workflow'
 on:
   push:
     branches:
-      - 'main'
+      - 'feature/workflows-setup'
       - 'develop'
 
 concurrency:
