--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -8,3 +8,6 @@ quarkus.http.test-port=9002
 
 #build
 quarkus.package.type=fast-jar
+
+integration.user-service-api = ${USER_SERVICE_API:http://localhost:8001/api/user-service}
+integration.reservation-service-api = ${RESERVATION_SERVICE_API:http://localhost:8003/api/reservation-service}
