--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 quarkus.http.port=8002
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
-quarkus.http.cors.methods=GET, POST, PUT, DELETE
+quarkus.http.cors.methods=GET, POST, PUT, DELETE, PATCH
 quarkus.rest.path = /api/accommodation-service
 
 # datasource configuration
