feat: Add liveness and readiness probes endpoints

--- a/pom.xml
+++ b/pom.xml
@@ -87,14 +87,13 @@
             <artifactId>jakarta.validation-api</artifactId>
             <version>3.0.2</version>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>io.quarkus</groupId>-->
-        <!--            <artifactId>quarkus-spring-web</artifactId>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>io.quarkus</groupId>-->
-        <!--            <artifactId>quarkus-rest-jackson</artifactId>-->
-        <!--        </dependency>-->
+
+        <!--   Liveness & readiness probes     -->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-health</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
