fix: Config monitoring only for prod profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,19 +34,19 @@ integration.user-service-api = ${USER_SERVICE_API:http://localhost:8001/api/user
 integration.reservation-service-api = ${RESERVATION_SERVICE_API:http://localhost:8003/api/reservation-service}
 
 
-quarkus.micrometer.export.prometheus.enabled=true
-quarkus.micrometer.export.prometheus.path=/metrics
+%prod.quarkus.micrometer.export.prometheus.enabled=true
+%prod.quarkus.micrometer.export.prometheus.path=/metrics
 
 
-quarkus.jaeger.enabled = true
-quarkus.jaeger.endpoint=${JAEGER_ENDPOINT:http://localhost:14268/api/traces}
-quarkus.jaeger.service-name = accommodation-service
+%prod.quarkus.jaeger.enabled = true
+%prod.quarkus.jaeger.endpoint=${JAEGER_ENDPOINT:http://localhost:14268/api/traces}
+%prod.quarkus.jaeger.service-name = accommodation-service
 
-quarkus.jaeger.sampler-type=const
-quarkus.jaeger.sampler-param=1
-quarkus.jaeger.log-trace-context=true
+%prod.quarkus.jaeger.sampler-type=const
+%prod.quarkus.jaeger.sampler-param=1
+%prod.quarkus.jaeger.log-trace-context=true
 
-quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n 
+%prod.quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n 
 
 
 
