--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+quarkus.application.name=accommodation-service
 quarkus.http.port=8002
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
@@ -31,3 +32,21 @@ quarkus.package.type=fast-jar
 
 integration.user-service-api = ${USER_SERVICE_API:http://localhost:8001/api/user-service}
 integration.reservation-service-api = ${RESERVATION_SERVICE_API:http://localhost:8003/api/reservation-service}
+
+
+%prod.quarkus.micrometer.export.prometheus.enabled=true
+%prod.quarkus.micrometer.export.prometheus.path=/metrics
+
+
+%prod.quarkus.jaeger.enabled = true
+%prod.quarkus.jaeger.endpoint=${JAEGER_ENDPOINT:http://localhost:14268/api/traces}
+%prod.quarkus.jaeger.service-name = accommodation-service
+
+%prod.quarkus.jaeger.sampler-type=const
+%prod.quarkus.jaeger.sampler-param=1
+%prod.quarkus.jaeger.log-trace-context=true
+
+%prod.quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n 
+
+
+
